--- a/js/package.json
+++ b/js/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.3.11"
+    "angular": "^1.3.11",
+    "angular-route": "^1.3.11"
   }
 }
