--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.3.11",
-    "angular-route": "^1.3.11"
+    "jquery": "^2.1.3",
+    "react": "^0.12.2",
+    "showdown": "^0.3.1"
   }
 }
