--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.2",
+    "font-awesome": "^4.3.0",
     "jquery": "^2.1.3",
+    "pilotjs": "^1.6.0",
     "react": "^0.12.2",
     "showdown": "^0.3.1"
   }
